Fix LSRA assert with infinite loops (bug 724773, r=dvander)